--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,11 @@ sudo: false
 language: node_js
 
 node_js:
-  - "8.0.0"
-  - "10.0.0"
+  - "8"
+  - "10"
 os:
   - linux
 
-script: npm test
+before_script: 
+  - "npm i"
+script: npm run test
